Adicionando mais uma opção de botão

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="nomeperfil">@ep.periciadigitalforense</div>
 
     <a href="https://medium.com/periciaforense/dont-f-k-with-cats-uma-ca%C3%A7ada-online-uma-vis%C3%A3o-t%C3%A9cnica-da-investiga%C3%A7%C3%A3o-9142fd6753f3" class="links">Don’t F**k with Cats: Uma Caçada Online: Uma visão técnica</a>
+    <a href="https://eloisapotrich.medium.com/imagem-reversa-c65bf0434baa" class="links">Imagem reversa</a>
 
     <div class="criador">Criado por EloPo</div>
 
