--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ t<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/logo.png" />
     <link rel="stylesheet" href="style.css">
     <title>Direct Link</title>
 </head>
