--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="nomeperfil">@oarpericias</div>
 
-    <a href="https://itsrio.org/pt/cursos/protecao-de-dados-de-criancas-e-adolescentes-desafios-praticos-e-regulatorios/" class="links">Curso: Proteção de dados de crianças e adolescentes – desafios práticos e regulatórios</a>
+    <a href="https://cyberlaw.juristas.com.br" class="links">International Cyberlaw Conference 2021</a>
     <a href="https://go.hotmart.com/O35389673C" class="links">Curso de Hardware Hacking</a>
                                                                                                                                    
 
