--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="nomeperfil">@oarpericias</div>
 
-    <a href="https://cyberlaw.juristas.com.br" class="links">International Cyberlaw Conference 2021</a>
+    <a href="https://go.hotmart.com/F55204091S" class="links">Introdução ao Bug bounty</a>
     <a href="https://go.hotmart.com/O35389673C" class="links">Curso de Hardware Hacking</a>
                                                                                                                                    
 
