--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
 
     <img src="assets/logo.png" alt="" class="logo">
 
-    <div class="nomeperfil">@oarpericias</div>
+    <div class="nomeperfil">@binariopericias</div>
 
-    <a href="https://go.hotmart.com/F55204091S" class="links">Introdução ao Bug bounty</a>
-    <a href="https://go.hotmart.com/O35389673C" class="links">Curso de Hardware Hacking</a>
-                                                                                                                                   
-
+    <a href="https://eloisapotrich.medium.com/forense-imagem-esteganografia-f2b92fd842c6" class="links">Forense Imagem: Esteganografia</a>
 
     <div class="criador">Criado por EloPo</div>
 
