--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="nomeperfil">@binariopericias</div>
 
     <a href="https://eloisapotrich.medium.com/forense-imagem-esteganografia-f2b92fd842c6" class="links">Forense Imagem: Esteganografia</a>
+    <a href="https://www.cci-es.org/activities/cciconlatam2021/" class="links">XVII Congreso Internacional de Ciberseguridad Industrial en Latinoamérica 2021 - Santiago (Chile)</a>
 
     <div class="criador">Criado por EloPo</div>
 
