--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <a href="https://eloisapotrich.medium.com/forense-imagem-esteganografia-f2b92fd842c6" class="links">Forense Imagem: Esteganografia</a>
     <a href="https://www.cci-es.org/activities/cciconlatam2021/" class="links">XVII Congreso Internacional de Ciberseguridad Industrial en Latinoamérica 2021 - Santiago (Chile)</a>
+    <a href="https://www.sympla.com.br/oab-sp-webinar-como-o-perito-em-forense-digital-pode-ajudar-o-advogado__1402813" class="links">OAB SP. Webinar: Como o Perito em Forense Digital Pode Ajudar o Advogado</a>
+    <a href="https://www.sympla.com.br/oab-sp---iii-congresso-de-compliance__1305714" class="links">OAB SP - III Congresso de Compliance</a>
 
     <div class="criador">Criado por EloPo</div>
 
