--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/favicon.ico" />
     <link rel="stylesheet" href="style.css">
-    <title>Direct Link</title>
+    <title>Binário Perícias</title>
 </head>
 
 <body>
@@ -20,7 +20,9 @@
     <a href="https://www.sympla.com.br/oab-sp-webinar-como-o-perito-em-forense-digital-pode-ajudar-o-advogado__1402813" class="links">OAB SP. Webinar: Como o Perito em Forense Digital Pode Ajudar o Advogado</a>
     <a href="https://www.sympla.com.br/oab-sp---iii-congresso-de-compliance__1305714" class="links">OAB SP - III Congresso de Compliance</a>
 
-    <div class="criador">Criado por EloPo</div>
+    <div class="criador">
+        <a href="https://github.com/EloPo">Criado por EloPo</a>
+    </div>
 
 </body>
 </html>
