Adicionando a tela de eventos

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 
     <img src="assets/logo.png" alt="" class="logo">
 
-    <div class="nomeperfil">@binariopericias</div>
+    <div class="nameperfil">@binariopericias</div>
 
     <a href="https://medium.com/bin%C3%A1rio" class="links">Blog</a>
+    <a href="./events.html" class="links">Eventos</a>
 
-    <div class="criador">
+    <div class="creator">
         <a href="https://github.com/EloPo">Criado por EloPo</a>
     </div>
 
 </body>
+
 </html>
