--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <img src="assets/logo.png" alt="" class="logo">
 
-    <div class="nameperfil">@binariopericias</div>
+    <div class="nameperfil">
+        <a href="https://www.instagram.com/binariopericias/">@binariopericias</a>
+    </div>
 
     <a href="https://medium.com/bin%C3%A1rio" class="links">Blog</a>
     <a href="./events.html" class="links">Eventos</a>
