--- a/events.html
+++ b/events.html
@@ -12,7 +12,9 @@
 <body>
     <img src="assets/logo.png" alt="" class="logo" />
 
-    <div class="nameperfil">@binariopericias</div>
+    <div class="nameperfil">
+        <a href="https://www.instagram.com/binariopericias/">@binariopericias</a>
+    </div>
 
     <p>Lista de eventos de direito e perícia</p>
 
