--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NB1YH1NGWM"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-NB1YH1NGWM');
+        </script>
     <link rel="shortcut icon" href="assets/favicon.ico" />
     <link rel="stylesheet" href="style.css">
     <title>Binário Perícias</title>
