--- a/events.html
+++ b/events.html
@@ -21,10 +21,10 @@
     <section class="container">
         <div class="card">
             <div class="card-image card-1"></div>
-            <h2>Ciclo de Palestras - Comitê ANADD de Crimes Digitais</h2>
-            <p>Data:02 de dezembro </p>
-            <p>Horário: 19h-21h</p>
-            <a href="https://www.sympla.com.br/ciclo-de-palestras---comite-anadd-de-crimes-digitais__1430251">Site do Evento</a>
+            <h2>Seminário Tribunal do Júri: Aspectos Práticos e Teóricos na Contemporaneidade</h2>
+            <p>Data:08 de dezembro </p>
+            <p>Horário: 10h</p>
+            <a href="http://prosperaestudos.kpages.online/seminario">Site do Evento</a>
         </div>
         <div class="card">
             <div class="card-image card-2"></div>
@@ -36,27 +36,20 @@
         </div>
         <div class="card">
             <div class="card-image card-3"></div>
-            <h2>OAB SP - Webinar: O primeiro ano de vigência da LGDP e os desafios para o ano de 2022</h2>
-            <p>Data:02 de dezembro </p>
-            <p>Horário: 18h-21h</p>
-            <a href="https://www.sympla.com.br/oab-sp---webinar-o-primeiro-ano-de-vigencia-da-lgdp-e-os-desafios-para-o-ano-de-2022__1422888">Site do Evento</a>
-        </div>
-        <div class="card">
-            <div class="card-image card-4"></div>
             <h2>WEBINAR DIREITO DIGITAL, INOVAÇÃO E TECNOLOGIA</h2>
             <p>Data:04 de dezembro </p>
             <p>Horário: 09h-12h</p>
             <a href="https://www.sympla.com.br/evento-online/webinar-direito-digital-inovacao-e-tecnologia/1397501">Site do Evento</a>
         </div>
         <div class="card">
-            <div class="card-image card-5"></div>
+            <div class="card-image card-4"></div>
             <h2>2º Congresso da Comissão Nacional de Compliance - ABA</h2>
             <p>Data: 07 de dezembro </p>
             <p>Horário: 20h-22h</p>
             <a href="https://www.sympla.com.br/evento-online/2º-congresso-da-comissao-nacional-de-compliance---aba/1391185">Site do Evento</a>
         </div>
         <div class="card">
-            <div class="card-image card-6"></div>
+            <div class="card-image card-5"></div>
             <h2>OAB SP - III Congresso de Compliance</h2>
             <p>Data: 09 de dezembro </p>
             <p>Horário: 09h-18h</p>
