--- a/events.html
+++ b/events.html
@@ -55,6 +55,13 @@
             <p>Horário: 09h-18h</p>
             <a href="https://www.sympla.com.br/oab-sp---iii-congresso-de-compliance__1305714">Site do Evento</a>
         </div>
+        <div class="card">
+            <div class="card-image card-6"></div>
+            <h2>[CURSO LGPD] MAPEAMENTO DE DADOS NA PRÁTICA - ONLINE E AO VIVO</h2>
+            <p>Data: 07 à 10 de fevereiro
+            <p>Horário: 19h-22h</p>
+            <a href="https://www.sympla.com.br/oab-sp---iii-congresso-de-compliance__1305714">Site do Evento</a>
+        </div>
     </section>
     <div class="creator">
         <a href="https://github.com/EloPo">Criado por EloPo</a>
