--- a/events.html
+++ b/events.html
@@ -16,53 +16,8 @@
         <a href="https://www.instagram.com/binariopericias/">@binariopericias</a>
     </div>
 
-    <p>Lista de eventos de direito e perícia</p>
+    <p>Sem eventos no momento</p>
 
-    <section class="container">
-        <div class="card">
-            <div class="card-image card-1"></div>
-            <h2>Seminário Tribunal do Júri: Aspectos Práticos e Teóricos na Contemporaneidade</h2>
-            <p>Data:08 de dezembro </p>
-            <p>Horário: 10h</p>
-            <a href="http://prosperaestudos.kpages.online/seminario">Site do Evento</a>
-        </div>
-        <div class="card">
-            <div class="card-image card-2"></div>
-            <h2>Curso de Extensão: Investigação defensiva na prática da advocacia criminal</h2>
-            <p>Data:02 de dezembro </p>
-            <p>Horário: 19h</p>
-            <a href="https://www.sympla.com.br/curso-de-extensao-investigacao-defensiva-na-pratica-da-advocacia-criminal__1418787">Site do Evento</a>
-        </div>
-        </div>
-        <div class="card">
-            <div class="card-image card-3"></div>
-            <h2>WEBINAR DIREITO DIGITAL, INOVAÇÃO E TECNOLOGIA</h2>
-            <p>Data:04 de dezembro </p>
-            <p>Horário: 09h-12h</p>
-            <a href="https://www.sympla.com.br/evento-online/webinar-direito-digital-inovacao-e-tecnologia/1397501">Site do Evento</a>
-        </div>
-        <div class="card">
-            <div class="card-image card-4"></div>
-            <h2>2º Congresso da Comissão Nacional de Compliance - ABA</h2>
-            <p>Data: 07 de dezembro </p>
-            <p>Horário: 20h-22h</p>
-            <a href="https://www.sympla.com.br/evento-online/2º-congresso-da-comissao-nacional-de-compliance---aba/1391185">Site do Evento</a>
-        </div>
-        <div class="card">
-            <div class="card-image card-5"></div>
-            <h2>OAB SP - III Congresso de Compliance</h2>
-            <p>Data: 09 de dezembro </p>
-            <p>Horário: 09h-18h</p>
-            <a href="https://www.sympla.com.br/oab-sp---iii-congresso-de-compliance__1305714">Site do Evento</a>
-        </div>
-        <div class="card">
-            <div class="card-image card-6"></div>
-            <h2>[CURSO LGPD] MAPEAMENTO DE DADOS NA PRÁTICA - ONLINE E AO VIVO</h2>
-            <p>Data: 07 à 10 de fevereiro
-            <p>Horário: 19h-22h</p>
-            <a href="https://www.sympla.com.br/oab-sp---iii-congresso-de-compliance__1305714">Site do Evento</a>
-        </div>
-    </section>
     <div class="creator">
         <a href="https://github.com/EloPo">Criado por EloPo</a>
     </div>
