--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <a href="https://medium.com/bin%C3%A1rio" class="links">Blog</a>
     <a href="./events.html" class="links">Eventos</a>
+    <a href="https://t.me/+oP57Dj9QGNFjYjVh" class="links">Telegram</a>
 
     <div class="creator">
         <a href="https://github.com/EloPo">Criado por EloPo</a>
