--- a/events.html
+++ b/events.html
@@ -18,9 +18,13 @@
 
     <p>Sem eventos no momento</p>
 
-    <div class="creator">
-        <a href="https://github.com/EloPo">Criado por EloPo</a>
-    </div>
+     <div class="card">
+            <div class="card-image card-1"></div>
+            <h2>Forum Blockchain</h2>
+            <p>Data: 27 e 28 de Janeiro</p>
+            <p>Horário: 09h</p>
+            <a href="https://forumblockchain.com.br">Site do Evento</a>
+     </div>
 </body>
 
 </html>
