--- a/events.html
+++ b/events.html
@@ -15,8 +15,10 @@
     <div class="nameperfil">
         <a href="https://www.instagram.com/binariopericias/">@binariopericias</a>
     </div>
-
-    <p>Sem eventos no momento</p>
+    
+    <p>Lista de eventos de direito e perícia</p>
+    
+    <section class="container">
 
      <div class="card">
             <div class="card-image card-1"></div>
@@ -25,6 +27,7 @@
             <p>Horário: 09h</p>
             <a href="https://forumblockchain.com.br">Site do Evento</a>
      </div>
+    </section>
 </body>
 
 </html>
