--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <a href="https://medium.com/bin%C3%A1rio" class="links">Blog</a>
-    <a href="./events.html" class="links">Eventos</a>
+    <a href="./curso.html" class="links">Curso</a>
     <a href="https://t.me/+oP57Dj9QGNFjYjVh" class="links">Telegram</a>
 
     <div class="creator">
