--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <a href="https://medium.com/bin%C3%A1rio" class="links">Blog</a>
-    <a href="./curso.html" class="links">Curso</a>
+    <a href="https://www.sympla.com.br/evento-online/workshop-introducao-a-pericia-em-imagem-forense/1926244" class="links">Workshop - Introdução a Perícia em Imagem Forense</a>
     <a href="https://t.me/+oP57Dj9QGNFjYjVh" class="links">Telegram</a>
 
     <div class="creator">
